z-index fix

--- a/style.css
+++ b/style.css
@@ -177,7 +177,7 @@ body {
     text-align: center;
     align-items: center;
     padding: 10px;
-    top: -40px;
+    top: -86px;
     background: #eeeeee;
     width: 80%;
     margin: auto;
@@ -230,18 +230,13 @@ body {
 
   .image1 {
     width:100%;
+
   }
   .image2 {
-    
-    position: absolute;
+    position: relative;
     z-index: 10;
-    top:-20px;
-    left:0px
-    /* top: 30px;
-    left: 30px; */
-    
-    
-
+    bottom: 500px;
+    right:131px;
   }
   
 
